--- a/css/tablet.css
+++ b/css/tablet.css
@@ -69,10 +69,14 @@
 
   #container-info {
     display: grid;
-    grid-template-columns: repeat(2, 320px);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 0.5fr;
-    gap: 40px;
+    gap: 20px;
     padding: 16px;
+  }
+
+  .view {
+    max-width: 300px;
   }
 
   /* SỞ THÍCH */
@@ -90,7 +94,7 @@
 
   #container-certificate img {
     max-width: 300px;
-    margin: 10px 20px 30px 10px;
+    margin: 10px 40px 0 30px;
   }
 
   .certificate p {
@@ -100,18 +104,19 @@
 
   #cer_1 {
     grid-row: 2 / 3;
-    margin-left: 10px;
+    margin-left: 30px;
   }
 
   #cer_2 {
     grid-column: 2 / span 3;
     margin-left: 10px;
-    width: 400px;
+    /* width: 400px; */
   }
 
   #cer_3 {
     grid-row: 5/6;
-    margin-left: 10px;
+    margin-left: 30px;
+    margin-top: 20px;
   }
 
   #cer_img3 {
