--- a/css/mobile.css
+++ b/css/mobile.css
@@ -72,7 +72,7 @@
     grid-template-rows: 1fr;
     gap: 40px;
     padding: 0;
-    margin: 50px ;
+    margin: 50px;
   }
 
   .view {
@@ -220,5 +220,8 @@
     height: 30px;
   }
 
+  #footer {
+    text-align: left;
+  }
 }
 
